mostly done css

--- a/final-project/index.html
+++ b/final-project/index.html
@@ -7,8 +7,8 @@
     <title>WebDev Final</title>
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/main.css">
-	<!-- import the Open Sans Font -->
-	<link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Open Sans'>
+    <!-- import the Open Sans Font -->
+    <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Open Sans'>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <!-- Adds link for the buttons like magnifyin glass and arrow -->
 </head>
@@ -37,6 +37,9 @@
                     <li>
                         <a href="#contact">Contact</a>
                     </li>
+                    <li>
+                        
+                    </li>
 
                 </ul>
                 <!-- Adds form action, placeholder text, and a submit button -->
@@ -53,9 +56,11 @@
                         <h1>
                             Welcome to Three Star Media
                         </h1>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae ad nesciunt explicabo ducimus cum
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae ad nesciunt explicabo ducimus
+                            cum
                             maiores
-                            accusantium consequuntur doloribus beatae tempora laboriosam, sed doloremque labore asperiores
+                            accusantium consequuntur doloribus beatae tempora laboriosam, sed doloremque labore
+                            asperiores
                             quod qui
                             officia eveniet? Dignissimos?</p>
                         <div>
@@ -89,21 +94,22 @@
                     </div>
                 </section>
                 <!-- gives id of "cards" and adds a generic class of services-cards to all services -->
-                <section id="services" >
-                    
-                        <div>
-                            <h2>Our Services</h2>
-                        </div>
-                        <div class="services-list">
+                <section id="services">
+
+                    <div>
+                        <h2>Our Services</h2>
+                    </div>
+                    <div class="services-list">
                         <div class="services-cards card services-item-span-3-col">
                             <img src="./images/digital.jpg" alt="digital">
                             <div>
-                            <h3>Digital Transformation</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro tempora quas et sunt eum
-                                corrupti
-                                pariatur cum exercitationem sapiente eligendi? Quisquam itaque voluptatum, accusamus
-                                tenetur soluta
-                                modi veritatis! Rem, et?</p>
+                                <h3>Digital Transformation</h3>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro tempora quas et sunt
+                                    eum
+                                    corrupti
+                                    pariatur cum exercitationem sapiente eligendi? Quisquam itaque voluptatum, accusamus
+                                    tenetur soluta
+                                    modi veritatis! Rem, et?</p>
                             </div>
                             <div>
                                 <button type="button">Digital Plans <i class="fa-solid fa-caret-right"></i></button>
@@ -114,12 +120,13 @@
                         <div class="services-cards card services-item-span-3-col">
                             <img src="./images/marketing.jpg" alt="marketing">
                             <div>
-                            <h3>Marketing</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro tempora quas et sunt eum
-                                corrupti
-                                pariatur cum exercitationem sapiente eligendi? Quisquam itaque voluptatum, accusamus
-                                tenetur soluta
-                                modi veritatis! Rem, et?</p>
+                                <h3>Marketing</h3>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro tempora quas et sunt
+                                    eum
+                                    corrupti
+                                    pariatur cum exercitationem sapiente eligendi? Quisquam itaque voluptatum, accusamus
+                                    tenetur soluta
+                                    modi veritatis! Rem, et?</p>
                             </div>
                             <div>
                                 <button type="button">Marketing Plans <i class="fa-solid fa-caret-right"></i></button>
@@ -130,12 +137,13 @@
                             <img src="./images/video.jpg" alt="video">
                             <div>
                                 <h3>Video Production</h3>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro tempora quas et sunt eum
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro tempora quas et sunt
+                                    eum
                                     corrupti
                                     pariatur cum exercitationem sapiente eligendi? Quisquam itaque voluptatum, accusamus
                                     tenetur soluta
                                     modi veritatis! Rem, et?</p>
-                                </div>
+                            </div>
                             <div>
                                 <button type="button">Video Plans <i class="fa-solid fa-caret-right"></i></button>
                             </div>
@@ -146,15 +154,16 @@
                             <img src="./images/web.jpg" alt="webdev">
                             <div>
                                 <h3>Web Development</h3>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro tempora quas et sunt eum
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro tempora quas et sunt
+                                    eum
                                     corrupti
                                     pariatur cum exercitationem sapiente eligendi? Quisquam itaque voluptatum, accusamus
                                     tenetur soluta
                                     modi veritatis! Rem, et?</p>
-                                </div>
-                                <div>
-                                    <button type="button">Web Plans <i class="fa-solid fa-caret-right"></i></button>
-                                </div>
+                            </div>
+                            <div>
+                                <button type="button">Web Plans <i class="fa-solid fa-caret-right"></i></button>
+                            </div>
                         </div>
 
                         <!-- adds class, image, and button for "webdev" section -->
@@ -162,13 +171,14 @@
                             <img src="./images/print.jpg" alt="print">
                             <div>
                                 <h3>Print</h3>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro tempora quas et sunt eum
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro tempora quas et sunt
+                                    eum
                                     corrupti
                                     pariatur cum exercitationem sapiente eligendi? Quisquam itaque voluptatum, accusamus
                                     tenetur
                                     soluta
                                     modi veritatis! Rem, et?</p>
-                                </div>
+                            </div>
                             <div>
                                 <button type="button">Print Plans <i class="fa-solid fa-caret-right"></i></button>
                             </div>
@@ -179,7 +189,7 @@
                 <!-- closes "services" section and opens "vision"section and new div -->
                 <section class="vision" id="vision">
                     <div>
-                        <h3>Our Vision</h3>
+                        <h3 class="our-vision">Our Vision</h3>
                         <p>
                             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deserunt velit suscipit ad?
                             Aperiam
@@ -196,7 +206,7 @@
                 <!-- closes "vision" section -->
                 <section id="our-team">
                     <!-- opens new section for the team -->
-                    <div class="Co-owners">
+                    <div class="Co-owners our-team">
                         <h2>Our Team</h2>
                         <div class="john card">
                             <img src="./images/john.jpg" alt="john-image">
@@ -219,7 +229,8 @@
                                 <h3>Bob Rite</h3>
                                 <h4>CFO and Co-Owner</h4>
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A porro obcaecati corrupti
-                                    reiciendis dolorum maiores aspernatur modi consectetur possimus earum non similique ad
+                                    reiciendis dolorum maiores aspernatur modi consectetur possimus earum non similique
+                                    ad
                                     nesciunt, qui, aliquam praesentium? Unde, delectus aperiam!</p>
                             </div>
                         </div>
@@ -229,10 +240,10 @@
                 <!-- opens "contact" section and gives div class of "ending content" -->
                 <section id="contact" class="contact">
 
-                    <div class="ending-content">
-                        <div>
+                    <div>
                         <h2>Contact Us</h2>
-                        </div>
+                    </div>
+                    <div class="ending-content">
                         <div class="message-area">
                             <h3>Send us a message</h3>
                             <form action="#" method="post">
